service report checkbox added, Revised in Tally button added, Delivery vouchers 18% prob and Qty column not showing solved

--- a/public/css/admin/admin/admin.css
+++ b/public/css/admin/admin/admin.css
@@ -58,6 +58,13 @@
   width: 3em;
 }
 
+.form-check-input {
+  position: relative !important;
+  margin-top: 0 !important;
+  margin-left: 0 !important;
+}
+
+
 input[type=number]::-webkit-inner-spin-button,
 input[type=number]::-webkit-outer-spin-button {
   -webkit-appearance: none;
