service report individual tick option added, parts in-out changed to parts given and received

--- a/templates/partials/adminHeader.hbs
+++ b/templates/partials/adminHeader.hbs
@@ -827,6 +827,7 @@
                                                     </div>
                                                 </div>
                                                 <div class="flex-grow-1">
+                                                    <input type="text" id="admin-id" value="{{admin._id}}" hidden>
                                                     <span class="fw-semibold d-block">{{admin.userName}}</span>
                                                     <small class="text-muted">{{admin.role.0.roleName}}</small>
                                                 </div>
