--- a/public/css/admin/serviceReport/addNewServiceReport.css
+++ b/public/css/admin/serviceReport/addNewServiceReport.css
@@ -99,3 +99,11 @@ table {
       border-bottom: 0;
     }
   }
+  
+  @media (max-width:350px) {
+    #service-report-main-form>div>div.container-fluid>div:nth-child(3)>div:nth-child(2)>span.px-2.font-weight-bold {
+      top: 0em !important;
+      left: 0.2em !important;
+      width: 100% !important;
+    }
+  }
