--- a/templates/views/user/products/products.hbs
+++ b/templates/views/user/products/products.hbs
@@ -1,5 +1,5 @@
 {{>userHeader}}
-{{#*inline "title"}}Vitco Impex - Dairy Machineries{{/inline}}
+{{#*inline "title"}}CRM-Company-management{{/inline}}
 {{#*inline "description"}}We are engaged in Manufacturing, Trading, and Wholesaling of a wide range of Milk Analyzer,
 Packing Machine, Vending Machine and much more.{{/inline}}
 {{#*inline "css"}}
