--- a/templates/views/user/signin/signin.hbs
+++ b/templates/views/user/signin/signin.hbs
@@ -3,8 +3,8 @@
 
 <head>
     {{>headTags}}
-    <title>Sign In - Vitco Impex</title>
-    <meta name="description" content="Sign In - Vitco Impex is one of the leading suppliers of Milk Analyzer, Packing Machine, Vending Machine and much more." />
+    <title>CRM-Company-management</title>
+    <meta name="description" content="CRM-Company-management" />
     <link rel="stylesheet" href="/css/signin/signin.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
         integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
