--- a/templates/views/user/signup/signup.hbs
+++ b/templates/views/user/signup/signup.hbs
@@ -9,9 +9,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
         integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <title>Sign Up - Vitco Impex</title>
+    <title>CRM-Company-management</title>
     <meta name="description"
-        content="Sign Up - Vitco Impex is one of the leading suppliers of Milk Analyzer, Packing Machine, Vending Machine and much more." />
+        content="CRM-Company-management" />
 </head>
 
 <body>
